# smb_pckgs

./: README.md
0_smb_env/: Outdoor_setup.dae  Van_belle.dae  Van_belle1.dae  Van_belle3.dae  model.config  model.sdf
2gal_pot/: ReadMe  model-1_4.sdf  model.sdf
ar_tag/: CMakeLists.txt  package.xml
ar_tag/launch/: ar_track_alvar.launch
cart_description/: CMakeLists.txt  package.xml
cart_description/launch/: cart_description.launch
cart_description/meshes/: trailer_wheel.dae
cart_description/meshes/new_meshes/: trailer_body1.dae  trailer_puller.dae
cart_description/urdf/: cart.urdf.xacro  trailer_wheel.urdf.xacro
smb-sim-kinetic-devel/2gal_pot/: model-1_4.sdf  model.config  model.sdf
smb-sim-kinetic-devel/2gal_pot/meshes/: 2 gal pot.dae
smb-sim-kinetic-devel/smb_control/: package.xml
smb-sim-kinetic-devel/smb_control/config/: control.yaml  gazebo_interface.yaml  localization.yaml
smb-sim-kinetic-devel/smb_control/launch/: control.launch  teleop.launch
smb-sim-kinetic-devel/smb_description/: CMakeLists.txt  package.xml
smb-sim-kinetic-devel/smb_description/launch/: description.launch
smb-sim-kinetic-devel/smb_description/meshes/: base_link.dae  outdoor_setup.dae  trailer_body.dae
smb-sim-kinetic-devel/smb_description/meshes/SMB/: ME-0191-V3-R1- Wheel 10in.SLDPRT  ME-0191-V3-R1- Wheel 10in.stl
smb-sim-kinetic-devel/smb_description/meshes/SMB_meshs/: 3D_LIDAR_VELODYNE_VPL16.dae  POT1Gal.STL  POT2Gal.STL  POT5Gal.STL  pot_2gal.dae  wheel.dae
smb-sim-kinetic-devel/smb_description/meshes/new_meshes/: base_link.dae
smb-sim-kinetic-devel/smb_description/urdf/: cart.urdf.xacro  decorations.urdf.xacro  empty.urdf  smb.urdf.xacro  trailer_wheel.urdf.xacro  wheel.urdf.xacro
smb-sim-kinetic-devel/smb_description/urdf/accessories/: kinect_camera.urdf.xacro  sensor_arch.urdf.xacro  sick_lms1xx_mount.urdf.xacro
smb-sim-kinetic-devel/smb_gazebo/: CMakeLists.txt  package.xml
smb-sim-kinetic-devel/smb_gazebo/launch/: smb_empty_world.launch  spawn_smb.launch
smb-sim-kinetic-devel/smb_gazebo/worlds/: outdoor_environment.world  smb_env.world  smb_env1.world
smb-sim-kinetic-devel/smb_viz/: CMakeLists.txt  package.xml
smb-sim-kinetic-devel/smb_viz/launch/: view_model.launch  view_robot.launch
