<?xml version="1.0"?>
<package>
  <name>smb_control</name>
  <version>0.3.1</version>
  <description>AIS smb controller configurations</description>
  <author email="ihelal@sfu.ca">Ibrahim Helal</author>
  <maintainer email="ihelal@sfu.ca">Ibrahim Helal</maintainer>
  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>

  <run_depend>smb_description</run_depend>
  <run_depend>interactive_marker_twist_server</run_depend>
  <run_depend>diff_drive_controller</run_depend>
  <run_depend>joint_state_controller</run_depend>
  <run_depend>joint_trajectory_controller</run_depend>
  <run_depend>joy</run_depend>
  <run_depend>multimaster_launch</run_depend>
  <run_depend>robot_localization</run_depend>
  <run_depend>rostopic</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>teleop_twist_joy</run_depend>
  <run_depend>twist_mux</run_depend>

  <export>
  </export>
</package>
