<?xml version="1.0"?>
<package>
  <name>smb_description</name>
  <version>0.3.1</version>
  <description>AIS SMB URDF description</description>
  <author email="ihelal@sfu.ca">Ibrahim Helal</author>
  <maintainer email="ihelal@sfu.ca">Ibrahim Helal</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>
  <run_depend>lms1xx</run_depend>
  <run_depend>gazebo_ros</run_depend>
    <export>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
    <gazebo_ros gazebo_media_path="${prefix}/models"/>
    </export>
</package>
