<?xml version="1.0"?>
<package>
  <name>smb_gazebo</name>
  <version>0.3.1</version>
  <description>AIS smb Simulator bringup</description>
  <author email="ihelal@sfu.ca">Ibrahim Helal</author>
  <maintainer email="ihelal@sfu.ca">Ibrahim Helal</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>hector_gazebo_plugins</run_depend>
  <run_depend>smb_control</run_depend>
  <run_depend>smb_description</run_depend>
  <run_depend>multimaster_launch</run_depend>
  <run_depend>pointcloud_to_laserscan</run_depend>
  <run_depend>rostopic</run_depend>

<export>
  <gazebo_ros gazebo_model_path="${prefix}/models"/>
  <gazebo_ros gazebo_media_path="${prefix}/models"/>
</export>

</package>
