<?xml version="1.0"?>
<package>
  <name>smb_viz</name>
  <version>0.3.1</version>
  <description>Visualization configuration for AIS smb</description>

  <author email="ihelal@sfu.ca">Ibrahim Helal</author>
  <maintainer email="ihelal@sfu.ca">Ibrahim Helal</maintainer>
  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslaunch</build_depend>

  <run_depend>smb_description</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>rviz_imu_plugin</run_depend>

  <export>
  </export>
</package>
